k3s/media/04.2-jackett.services.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett-svc
  namespace: media
spec:
  ports:
    - port: 9117
      targetPort: 9117
      protocol: TCP
      name: jackett-http
  selector:
    app: jackett
