k3s/media/04.3-sonarr.services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  namespace: media
spec:
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
      name: sonarr-http
  selector:
    app: sonarr
