k3s/media/04.4-radarr.services.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  namespace: media
spec:
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
      name: radarr-http
  selector:
    app: radarr
