k3s/media/02.3-sonarr.ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress
  namespace: media

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.1.37`) && PathPrefix(`/sonarr`)
      kind: Rule
      services:
        - name: sonarr-svc
          passHostHeader: true
          namespace: media
          port: 8989
