k3s/media/02.4-radarr.ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: media

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.1.37`) && PathPrefix(`/radarr`)
      kind: Rule
      services:
        - name: radarr-svc
          passHostHeader: true
          namespace: media
          port: 7878
